2017-08-15 Tony Naggs
	* Candidate Release 1.9
	* Minor implementation changes for Windows, including checking for USB VID
	  & PID match expected values before opening each HID device, and to keep
	  trying to find the HID Bootloader for a short while in case Windows is
	  still configuring it.
	* Add support of Microsoft Visual C for building for Windows.
	* (minor) Stanardise code indentation with tabs (for main.c, hex.c &
	  usb-windows.c, other files not touched), as there was a horrible mixture
	  of tabs, 2 spaces & 4 spaces in some functions.

2016-05-13 [Micke Prag - pull request #19, #20]
	* Release 1.8
	* Strip binaries using the strip tool set by the current toolchain and not
	  the hardcoded system one. This fix is needed for crosscompilation.
	* The usb data is returned as little endian. When using on big endian
	  systems (such as mips) this must be converted.
	* [Adam Laurie & Micke Prag] Ensure data is always flushed after write.

2016-05-13 [Micke Prag - pull request #17]
	* Release 1.7
	* Add signing option for newer bootloaders:
		After the flash has been verified we need to send the SIGN_FLASH command
		to the bootloader. Else the bootloader won't boot into the new firmware.

2014-07-07  Adam Laurie
	* Release 1.6
	* Move versioning into Makefile
	* Move executables into binaries sub-dir
	* Add pre-compiled linux-32/64, osx-32/64 and win-32 executables to repo
	* Create dist sub-dir for tarball and zipfile (as google code no longer supports downloads)

2014-07-02
	* Issue #12 - improve readability of address checking routine [tonynaggs]
	* Re-implement setting of bytes per address according to device family, 
	  clobbered (and broken) by 1.4 patch [Adam Laurie]
	* Replace short buffer flushing code clobbered by v1.4 patch [Adam Laurie]
	* Change misleading function name (verifyBlock -> verifyBlockProgrammable) [Adam Laurie]
	* Add 32-bit target to Makefile [Adam Laurie]
	* Release candidate 1.5

2014-07-01